# letmelcthatforyou

./: .gitignore  LICENSE  README.md  pyproject.toml  wowlc.spec
.github/workflows/: release.yml
appimage/: letmelcthatforyou.desktop
data/: model_catalogue.json  realms.json  tokens.json  zones.json
hooks/: hook-dll.py  hook-ssl.py
scripts/: generate_model_catalogue.py
src/wowlc/: __main__.py  _version.py
src/wowlc/auth/: __init__.py  tmb_authenticate.py  wcl_authenticate.py
src/wowlc/core/: __init__.py  config.py  paths.py  version_checker.py  zones.py
src/wowlc/qt/: __init__.py  auth_webview.py  folder_picker.py  platform_setup.py  window.py
src/wowlc/services/: blizz_manager.py  lc_processor.py  llm_providers.py  nexus_manager.py  parse_cache.py  tmb_manager.py  wcl_client.py
src/wowlc/services/gui/: __init__.py  main.py  shared.py
src/wowlc/services/gui/components/: __init__.py  help_dialog.py  version_badge.py
src/wowlc/services/gui/tabs/: __init__.py  connections.py  dev.py  run_lc.py  settings.py
src/wowlc/tools/: fetching_current_items.py  fetching_parses.py  get_item_candidates.py
tests/: test_era_tokens_data.py  test_parse_response.py
