[project]
name = "wowlc"
version = "0.1.0"
description = "GUI application for World of Warcraft loot council decisions using LLM APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gql>=4.0.0",
    "httpx>=0.28.1",
    "litellm>=1.30.0",
    "nicegui>=3.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "PySide6>=6.6.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
